force-app/main/default/objects/ServiceTerritoryMember/fields/MR_DT_Overlap__c.field-meta.xml
<CustomField>
    <fullName>MR_DT_Overlap__c</fullName>
    <description>RA means at least 1 RA exists for this Resource in the selected date range
SA means at least 1 SA exists for this Resource in the selected date range
Both means at least 1 RA and 1 SA exists for this Resource in the selected date range
Blank means no overlap exists</description>
    <inlineHelpText>RA means at least 1 RA exists for this Resource in the selected date range
SA means at least 1 SA exists for this Resource in the selected date range
Both means at least 1 RA and 1 SA exists for this Resource in the selected date range
Blank means no overlap exists</inlineHelpText>
    <label>MR DT Overlap</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>