force-app/main/default/objects/ServiceTerritoryMember/fields/MR_DT_Percent_Availability__c.field-meta.xml
<CustomField>
    <fullName>MR_DT_Percent_Availability__c</fullName>
    <description>this field stores the percent availability of the resource over the date horizon specified by the user.  It is calculated as blocked hours/job duration, where blocked hours is the sum of resource absences and overlapping service appointments.</description>
    <label>% Availability</label>
    <length>10</length>
    <type>Text</type>
</CustomField>