force-app/main/default/objects/ServiceTerritoryMember/fields/MR_DT_Skill_Names_Matched__c.field-meta.xml
<CustomField>
    <fullName>MR_DT_Skill_Names_Matched__c</fullName>
    <description>Stores the list of skills matched regardless of whether the levels match versus what&apos;s required on the work order</description>
    <label>Skill Name Match</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>