force-app/main/default/objects/ServiceTerritoryMember/fields/MR_DT_Skills_Matched__c.field-meta.xml
<CustomField>
    <fullName>MR_DT_Skills_Matched__c</fullName>
    <description>This stores the actual list of skills and skill levels matched for the technician vs what is required on the work order</description>
    <label>Skill Levels Match</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>