force-app/main/default/objects/ServiceTerritoryMember/fields/MR_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>MR_Resource_Name__c</fullName>
    <formula>ServiceResource.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR Resource Name</label>
    <type>Text</type>
</CustomField>