force-app/main/default/objects/ServiceTerritoryMember/fields/MR_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>MR_Service_Territory__c</fullName>
    <formula>ServiceTerritory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR Service Territory</label>
    <type>Text</type>
</CustomField>